# lvglplus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Contributors  README.md  lv_conf.h  lv_drv_conf.h
cmake/: lvgl_plus-config.cmake.in  silent_copy.cmake  utils.cmake
communication/: CMakeLists.txt
communication/streams/: CMakeLists.txt  README.md
communication/streams/include/: event_sink.hh  stream.hh  stream_base.hh  stream_consumer.hh  stream_controller.hh  stream_event_loop.hh  stream_sink.hh  stream_subscription.hh
communication/streams/src/: stream_event_loop.cc
communication/streams/tests/: CMakeLists.txt  stream_test.cc
communication/thread_blocker/: CMakeLists.txt  README.md
communication/thread_blocker/include/: thread_blocker.hh
communication/thread_blocker/src/: thread_blocker.cc
communication/thread_blocker/tests/: CMakeLists.txt  thread_blocker_test.cc
examples/heater/: CMakeLists.txt  heater.cc  heater.hh  main.cc  main_page.cc  main_page.hh  settings_page.cc  settings_page.hh
examples/heater/golden_tests/: README.md  test_golden.cc
examples/heater/navigation_bloc/: navigation_bloc.hh  navigation_event.hh  navigation_state.hh
examples/multiple_display/: CMakeLists.txt  main.cc
examples/thermostat/: CMakeLists.txt  main.cc  main_page.cc  main_page.hh  menu_button.hh  parameters.hh  settings_page.cc  settings_page.hh  thermostat.cc  thermostat.hh
examples/widget_catalog/: CMakeLists.txt  main.cc
helpers/sdl/: sdl_drv.cc  sdl_drv.hh
helpers/snapshot/: bitmap.cc  bitmap.hh  snapshot.cc  snapshot.hh
helpers/wait_for/: wait_for.cc  wait_for.hh
include/: controllable.hh  lvgl_display.hh  lvgl_driver.hh  lvgl_object.hh  lvgl_plus.hh  renderable.hh  root_widget.hh  text_controllable.hh  widget.hh  widget_container.hh
include/bloc/: bloc.hh  bloc_base.hh
include/controllers/: controller.hh  text_controller.hh  text_editing_controller.hh
include/widget_containers/: multi_child_widget.hh  no_child_widget.hh  single_child_widget.hh
include/widgets/: bloc_widget_builder.hh  button.hh  chart.hh  checkbox.hh  circular_slider.hh  divider.hh  dropdown_button.hh  image.hh  led.hh  linear_progress_indicator.hh  list.hh  list_wheel_scroll_view.hh  message_box.hh  meter.hh  slider.hh  spinbox.hh  spinner.hh  stream_widget_builder.hh  switch.hh  table.hh  tabview.hh  text.hh  text_field.hh
include/widgets/layouts/: column.hh  container.hh  row.hh
include/widgets/properties/: alignment.hh  padding.hh  point.hh  symbols.hh  theme.hh
include/widgets/properties/base/: base_params.hh  indicator_params.hh  knob_params.hh  layout_params.hh  range_params.hh  text_basic_params.hh
include/widgets/properties/implementation/: button_params.hh  chart_params.hh  checkbox_params.hh  circular_slider_params.hh  column_params.hh  container_params.hh  divider_params.hh  dropdown_button_params.hh  image_params.hh  led_params.hh  linear_progress_indicator_params.hh  list_params.hh  list_wheel_scroll_view_params.hh  message_box_params.hh  meter_params.hh  row_params.hh  slider_params.hh  spinbox_params.hh  spinner_params.hh  switch_params.hh  table_params.hh  tabview_params.hh  text_field_params.hh  text_params.hh  widget_params.hh
src/: lvgl_object.cc  lvgl_plus.cc  mouse_cursor_icon.cc  widget.cc  widget_container.cc
src/widgets/: button.cc  chart.cc  checkbox.cc  circular_slider.cc  divider.cc  dropdown_button.cc  image.cc  led.cc  linear_progress_indicator.cc  list.cc  list_wheel_scroll_view.cc  message_box.cc  meter.cc  slider.cc  spinbox.cc  spinner.cc  switch.cc  table.cc  tabview.cc  text.cc  text_field.cc
src/widgets/layouts/: column.cc  container.cc  row.cc
src/widgets/properties/: knob_params.cc  padding.cc  symbols.cc  theme.cc
src/widgets/properties/base/: text_basic_params.cc
tests/: CMakeLists.txt  test_bitmap.cc  test_fixture.hh  test_lvgl_plus.cc  test_widget.cc  test_widget_params.cc
